# microscopemetrics-schema

./: .copier-answers.yml  .cruft.json  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  config.public.mk  config.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
Any/: index.html
ArgolightBCentersOfMass/: index.html
ArgolightBDataset/: index.html
ArgolightBDistanceKeyValues/: index.html
ArgolightBInput/: index.html
ArgolightBInputData/: index.html
ArgolightBInputParameters/: index.html
ArgolightBIntensityKeyValues/: index.html
ArgolightBOutput/: index.html
ArgolightEDataset/: index.html
ArgolightEInput/: index.html
ArgolightEInputData/: index.html
ArgolightEInputParameters/: index.html
ArgolightEKeyValues/: index.html
ArgolightEOutput/: index.html
ArrayData/: index.html
AxisEnum/: index.html
Boolean/: index.html
CentersFitted/: index.html
CentersGeometric/: index.html
CentersMaxIntensity/: index.html
CentersOfMass/: index.html
Channel/: index.html
ChannelSeries/: index.html
Color/: index.html
Column/: index.html
ColumnSeries/: index.html
Comment/: index.html
CommentTypes/: index.html
CommentTypesEnum/: index.html
CriticalParameter/: index.html
Curie/: index.html
Dangerous/: index.html
DataReference/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Device/: index.html
Double/: index.html
Ellipse/: index.html
Experimenter/: index.html
FieldIlluminationCentersFitted/: index.html
FieldIlluminationCentersGeometric/: index.html
FieldIlluminationCentersMaxIntensity/: index.html
FieldIlluminationCentersOfMass/: index.html
FieldIlluminationCornersIntensities/: index.html
FieldIlluminationDataset/: index.html
FieldIlluminationInput/: index.html
FieldIlluminationInputData/: index.html
FieldIlluminationInputParameters/: index.html
FieldIlluminationKeyMeasurement/: index.html
FieldIlluminationKeyMeasurements/: index.html
FieldIlluminationKeyValues/: index.html
FieldIlluminationOutput/: index.html
FieldIlluminationProfilesIntensity/: index.html
Float/: index.html
FluorescentHomogeneousThickField/: index.html
FluorescentHomogeneousThinField/: index.html
HarmonizedMetricsDatasetCollection/: index.html
HasInputParametersMixin/: index.html
HasSampleMixin/: index.html
HomogeneousField/: index.html
Image/: index.html
Image2D/: index.html
Image5D/: index.html
ImageAsNumpy/: index.html
ImageInline/: index.html
ImageMask/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
KeyMeasurement/: index.html
KeyMeasurements/: index.html
KeyValue/: index.html
KeyValues/: index.html
LightSource/: index.html
LightSourcePower/: index.html
LightSourcePowerDataset/: index.html
LightSourcePowerInputData/: index.html
LightSourcePowerInputParameters/: index.html
LightSourcePowerKeyMeasurement/: index.html
LightSourcePowerKeyMeasurements/: index.html
LightSourcePowerOutput/: index.html
Line/: index.html
LinesRoi/: index.html
Mask/: index.html
MeasuringLocationEnum/: index.html
MetaObject/: index.html
MetricsDataset/: index.html
MetricsDatasetCollection/: index.html
MetricsInput/: index.html
MetricsInputData/: index.html
MetricsInputParameters/: index.html
MetricsObject/: index.html
MetricsOutput/: index.html
Microscope/: index.html
MicroscopeCollection/: index.html
MicroscopeType/: index.html
MicroscopeTypeEnum/: index.html
NamedObject/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
NotAveraged/: index.html
OMEROObject/: index.html
OMEROObjectTypeEnum/: index.html
OMEROReference/: index.html
Objectidentifier/: index.html
OrthogonalImage/: index.html
PSFBeads/: index.html
PSFBeadsCenters/: index.html
PSFBeadsDataset/: index.html
PSFBeadsInput/: index.html
PSFBeadsInputData/: index.html
PSFBeadsInputParameters/: index.html
PSFBeadsKeyMeasurement/: index.html
PSFBeadsKeyMeasurements/: index.html
PSFBeadsKeyValues/: index.html
PSFBeadsOutput/: index.html
PersonStatus/: index.html
PixelSeries/: index.html
PlaneAxisEnum/: index.html
Point/: index.html
PointsRoi/: index.html
Polygon/: index.html
PowerMeasurement/: index.html
Roi/: index.html
(+1093 files in other folders)
