[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "microscopemetrics_schema"
description = "A schema for microscope-metrics, a python package for microscope QC"
authors = [
  {name = "Julio Mateos Langerak", email = "julio.mateos-langerak@igh.cnrs.fr"},
]
license = {text = "GNU GPL v3.0"}
readme = "README.md"
include = ["README.md", "src/microscopemetrics_schema/schema", "project"]

# We can't use caret ^ requirement specifiers here. They are a Poetry speciality.
requires-python = ">=3.11,<4.0"

dynamic = ["version"]

dependencies = [
  "linkml-runtime >=1.8.0",
  "hypothesis >= 6.151.11",
]

[tool.poetry]
requires-poetry = ">=2.0"
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = ">=1.7.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
linkml = ">=1.3.5"
mkdocs-material = ">=8.2.8"
mkdocs-mermaid2-plugin = ">=1.1.1"
schemasheets = ">=0.1.14"
jupyter = ">=1.0.0"
mknotebooks = ">= 0.8.0"
